--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,4 +1,22 @@
 ---
+kind: Service
+apiVersion: v1
+metadata:
+  name: node-example
+spec:
+  type: LoadBalancer
+  selector:
+    app: node-example
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+    - name: node-app
+      protocol: TCP
+      port: 3000
+
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -12,7 +30,7 @@ spec:
     spec:
       containers:
       - name: node
-        image: docker.pkg.github.com/tcbyrd/node-k8s/node-k8s:0.0.1
+        image: docker.pkg.github.com/tcbyrd/node-k8s/node-k8s:0.0.2
         ports:
         - containerPort: 3000
           protocol: TCP
