don't use load balancer for the app
inbound traffic will come from nginx ingress

--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,11 +5,8 @@ metadata:
     labels:
         app: "tcbyrdk8sdev-ac89"
 spec:
-    type: LoadBalancer
+    type: ClusterIP
     ports:
     - port: 3000
-      targetPort: 3000
-      protocol: TCP
-      name: http
     selector:
         app: "tcbyrdk8sdev-ac89"
