--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,8 @@ jobs:
         password: ${{ secrets.AzureAppService_ContainerPassword_75a57ebdb84947a09a48290c6e2122c2 }}
 
     - run: |
-        docker build . -t docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s:${{ github.sha }}
-        docker push docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s:${{ github.sha }}
+        docker build . -t docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s/node-k8s:${{ github.sha }}
+        docker push docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s/node-k8s:${{ github.sha }}
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -32,4 +32,4 @@ jobs:
         app-name: 'getStartedApp059f5af2'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_85e6306e443b493096c03d2202bb727b }}
-        images: 'docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s:${{ github.sha }}'
+        images: 'docker.pkg.github.com/${{ secrets.AzureAppService_ContainerUsername_07657780175d49d5852a4bb9a1a27543 }}/node-k8s/node-k8s/:${{ github.sha }}'
