set GITHUB_TOKEN as env variable

--- a/.github/workflows/main_getStartedApp059f5af2.yml
+++ b/.github/workflows/main_getStartedApp059f5af2.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Create Deployment
         id: create_deployment
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "::set-output name=deployment_id::$(gh api repos/tcbyrd/tcbyrd.dev/deployments -f ref=abcb18f2ac0f05983497294c7d21148a3d86144b -q .id)"
 
@@ -50,6 +52,8 @@ jobs:
     
     steps:
     - name: Wait for current version
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         response=$(curl -s https://getstartedapp059f5af2.azurewebsites.net/.github/version)
 
