--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           DEPLOYMENT_ID=$(gh api repos/${{ github.repository }}/deployments -f ref=${{ github.sha }} -q .id) &&
           gh api repos/${{ github.repository }}/deployments/$DEPLOYMENT_ID/statuses \
           -f state=pending -f log_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          ::set-output name=deployment_id::$DEPLOYMENT_ID
+          echo "::set-output name=deployment_id::$DEPLOYMENT_ID"
   deploy:
     needs: [trigger-deployment]
     runs-on: 'ubuntu-latest'
