--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          DEPLOYMENT_ID=$(gh api repos/${{ github.repository }}/deployments -f ref=${{ github.sha }} -q .id)
-          gh api repos/${{ github.repository }}/deployments/$DEPLOYMENT_ID/statuses -f state=pending -f target_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          echo "::set-output name=deployment_id::$DEPLOYMENT_ID"
+          deploymentID=$(gh api repos/${{ github.repository }}/deployments -f ref=${{ github.sha }} -q .id)
+          echo "::set-output name=deployment_id::$deploymentID"
+          gh api repos/${{ github.repository }}/deployments/$deploymentID/statuses -f state=pending -f target_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
   deploy:
     needs: [trigger-deployment]
     runs-on: 'ubuntu-latest'
